# d4rl-slim-benchmark

./: .cruft.json  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  documentation.yml
cluster/: Dockerfile  Dockerfile_d4rl  Dockerfile_d4rl_slim  Makefile  README.md  launcher.py
cluster/config/: default.py
cluster/config/offline/: cql.py
d4rl_slim_benchmark/: __init__.py  buffer.py  d4rl_slim_utils.py  d4rl_utils.py  main.py  train.py  utils.py
d4rl_slim_benchmark/algorithms/: __init__.py
d4rl_slim_benchmark/algorithms/offline/: cql.py  cql_d4rl.py  cql_d4rl_slim.py  iql.py
d4rl_slim_benchmark/config/: default.py
d4rl_slim_benchmark/config/offline/: cql.py  iql.py
docs/: development.md
docs/reference/: d4rl_slim_benchmark.md
requirements/: d4rl-slim.txt  d4rl.txt
tests/: test_add.py
